# Forward-Chaining-Inference-Engine

./: CMakeLists.txt  README.md  hash.c  hash.h  inference.c  inference.h  kb.c  kb.h  list.c  list.h  main.c  rule.c  rule.h  tests.c  tests.h  utils.c  utils.h
